add_library(${ORE_TEST_SUPPORT_NAME} INTERFACE)
add_library(${ORE_PACKAGE_NAME}::${ORE_TEST_SUPPORT_NAME} ALIAS ${ORE_TEST_SUPPORT_NAME})

target_include_directories(${ORE_TEST_SUPPORT_NAME} INTERFACE
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

# Installation properties.
install(TARGETS ${ORE_TEST_SUPPORT_NAME} EXPORT ${ORE_PACKAGE_NAME}Targets)

install(
    DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/oret"
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
    FILES_MATCHING PATTERN "*.hpp" PATTERN "*.h"
)
